# bourse_scanner

./: .env.example  .gitignore  CLAUDE.md  README.md  pea-scanner-plan.md  pyproject.toml
.claude/rules/: architecture.md  data-flow.md  python-conventions.md  testing.md
config/: watchlist.yaml
docs/plans/: 2026-02-22-etape2-collecte-historique-design.md  2026-02-22-etape2-implementation.md  2026-02-22-etape3-catalyst-matcher-design.md  2026-02-22-etape3-implementation.md  2026-02-22-pea-scanner-design.md  2026-02-22-step1-pdf-extraction.md  2026-02-23-etape4-implementation.md  2026-03-07-feedback-loop-design.md  (+6 more)
scripts/: analyze_features.py  analyze_trades_llm.py  collect_historical.py  explore_pdf.py  import_pdfs.py  import_prices_csv.py  init_db.py  match_catalysts.py  run_feedback.py  run_scanner.py  run_telegram_bot.py  score_sentiment.py  train_model.py
tests/: test_alpha_vantage_collector.py  test_boursorama_scraper.py  test_catalyst_matcher.py  test_database.py  test_evaluator.py  test_feature_engine.py  test_formatter.py  test_fundamental_collector.py  test_llm_analyzer.py  test_llm_news_classifier.py  test_llm_sentiment.py  test_marketaux_collector.py  test_model_retrainer.py  test_news_classifier.py  test_news_collector.py  test_newsdata_collector.py  test_orderbook_collector.py  test_pdf_parser.py  test_performance_tracker.py  test_predictor.py  test_price_collector.py  test_rss_collector.py  test_signal_filter.py  test_signal_reviewer.py  test_technical_indicators.py  test_telegram_bot.py  test_ticker_mapper.py  test_trade_matcher.py  test_trainer.py
(+38 files in other folders)
